--- a/upsite/public/style.css
+++ b/upsite/public/style.css
@@ -10,7 +10,11 @@
     padding: 20px 10px;
 }
 .navTool   h1 {
-    margin-right: auto;
+    color: #FFFF59;
+    margin-right: 1700px;
+}
+.navTool   h2 {
+    color: #FFFF59;
 }
 body {
     margin: 0;
@@ -73,7 +77,7 @@ body {
     color: #00B6FF
 }
 footer  {
-    margin-top: 403px;
+    margin-top: 393px;
     display: flex;
     align-items: center;
     background-color: #00B6FF;
@@ -128,4 +132,8 @@ input[type=file]::file-selector-button   {
     font-size: large;
     padding: 10px;
     text-align: center;
+}
+Link    {
+    text-decoration: underline;
+    text-decoration-color:#404750;
 }
