--- a/upsite/public/style.css
+++ b/upsite/public/style.css
@@ -40,8 +40,20 @@
     margin-top: 4vh;
     padding: 0;
     height: 5vh;
-    border-radius: 25px;
 }
+
+.home--Container{
+    display: grid;
+    grid-template-columns: 1fr;
+    text-align: center;
+}
+
+.home--ButtonContainer{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+
 
 
 
