--- a/client/public/style.css
+++ b/client/public/style.css
@@ -5,16 +5,18 @@
     margin: 0 auto;
     background-color: #6F7188;
     border-radius: 25px;
-    grid-template-columns: 1fr;
+    grid-template-rows: repeat(3, 1fr);
+    align-items: center;
 }
 
-.navBar{
+.navBar--Container{
     display: grid;
     background-color: #00B6FF;
     border-radius: 25px 25px 0px 0px;
     height: 13vh;
     grid-template-columns: repeat(2, 1fr);
     box-shadow: 0px 7px 10px #003e57;
+    align-self: start;
 }
 
 .navBar--LadderText, .navBar--LoginText{
@@ -46,18 +48,22 @@
     display: grid;
     grid-template-columns: 1fr;
     text-align: center;
+    margin: 0 auto;
 }
 
 .home--ButtonContainer{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    margin: 0 auto;
+    justify-items: center;
+    align-items: center;
 }
 
 .footer--Container{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     height: 13vh;
-    padding-top: 13vh;
+    align-self: end;
 }
 
 .footer--Label{
