--- a/client/public/style.css
+++ b/client/public/style.css
@@ -1,9 +1,14 @@
+body{
+    background-color: #2a2b33;
+}
+
 .mainContainer{
     width: 840px;
     min-height: 800px;
     height: 100vh;
     margin: 0 auto;
     background-color: #6F7188;
+    box-shadow: 0px 0px 20px black;
     border-radius: 25px;
     color: white;
 }
