--- a/client/public/style.css
+++ b/client/public/style.css
@@ -16,7 +16,6 @@ body{
 .mainGrid--Wrapper{
     display: grid;
     grid-template-rows: 1fr 4fr 1fr;
-    align-items: center;
     height: 100vh;
 }
 
@@ -25,25 +24,35 @@ body{
     background-color: #00B6FF;
     border-radius: 25px 25px 0px 0px;
     height: 13vh;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 1fr 1fr;
     box-shadow: 0px 7px 10px #003e57;
     align-self: start;
     align-items: center;
 }
 
-.navBar--LadderText, .navBar--LoginText{
-    padding-top: 5vh;
-    padding-bottom: 5vh;
-    margin: 0 auto;
-}
-.navBar--LadderText{
-    text-align: start;
-    padding-left: 6.3vh;
+
+.navBar--LadderButton, .navBar--LoginButton{
+
 }
 
-.navBar--LoginText{
-    text-align: end;
-    padding-right: 3vh;
+.navBar--LadderButton{
+
+}
+
+.navBar--LoginButton{
+
+}
+
+.navBar--Button1 {
+    text-align: left;
+}
+
+.navBar--Button2{
+    text-align: right;
+}
+
+.navBar--Button1, .navBar--Button2 {
+    
 }
 
 .navBar--LogoImg{
