--- a/client/public/style.css
+++ b/client/public/style.css
@@ -127,6 +127,12 @@ body{
     border: 0px;
 }
 
+.dashBoard--FileWrapper {
+    /* add hover to make bar get brighter when hoverd over. */
+    display: grid;
+    grid-template-columns: 60vw 25vw 15vw;
+}
+
 .uploadPage--Buttons {
     transition-duration: 0.6s;
     background-color: transparent;
