--- a/client/public/style.css
+++ b/client/public/style.css
@@ -1,7 +1,30 @@
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,300;0,400;0,600;1,300;1,400;1,600&family=IBM+Plex+Serif:ital,wght@0,100;0,200;0,300;0,600;0,700;1,100;1,200;1,300;1,600;1,700&display=swap');
 body{
     background-color: #2a2b33;
     margin: 0;
     padding: 0;
+    font-family: 'Fira Sans', sans-serif;
+    font-weight: 300;
+    font-size: 12px;
+}
+
+::-webkit-scrollbar {
+    width: 15px;
+}
+
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px #00B6FF;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #FFFF72;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #FFFF59;
+    z-index: 1;
 }
 
 .mainContainer{
@@ -11,9 +34,16 @@ body{
     color: white;
 }
 
-.mainGrid--Wrapper{
+/* .mainGrid--Wrapper{
     display: grid;
     grid-template-rows: 13vh 74vh 13vh;
+    height: 100vh;
+    margin: auto;
+} */
+
+.mainGrid--Wrapper{
+    display: grid;
+    grid-template-rows: 90px 1fr 150px;
     height: 100vh;
     margin: auto;
 }
@@ -21,10 +51,10 @@ body{
 .navBar--Container{
     display: grid;
     background-color: #00B6FF;
-    border-radius: 0vh 0vh 1vh 1vh;
+    border-radius: 0px 0px 15px 15px;
     width: 100vw;
-    height: 13vh;
-    grid-template-columns: 50vw 50vw;
+    height: 90px;
+    grid-template-columns: 1fr 1fr;
     box-shadow: 0px 7px 10px #003e57;
     align-self: start;
     align-items: center;
@@ -33,24 +63,42 @@ body{
 
 
 .navBar--LadderButton, .navBar--LoginButton{
+    font-family: 'IBM Plex Serif', serif;
+    font-weight: 700;
+    font-size: 25px;
+    font-style: italic;
+    color: #2a2b33;
+    background: transparent;
+    height: 35px;
+    width: 180px;
+    padding-bottom: 40px;
+    border: none;
+}
 
+.navBar--LadderButton:hover, .navBar--LoginButton:hover{
+    color: #00B6FF;
+    transition-duration: .6s;
+    background: #FFFF59;
+    border-radius: 10px;
 }
 
 .navBar--LadderButton{
     place-self: start;
     align-self: center;
+    margin-left: 10px;
 }
 
 .navBar--LoginButton{
     place-self: end;
-    align-self: center
+    align-self: center;
+    margin-right: 10px;
 }
 
 .navBar--LogoImg{
     display: block;
     position: absolute;
-    height: 7vh;
-    top: 4vh;
+    height: 75px;
+    top: 5px;
     left: 47.4vw;
 }
 
@@ -71,14 +119,13 @@ body{
 
 .footer--Container{
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    height: 13vh;
+    grid-template-columns: 1fr 1fr 1fr ;
     align-self: end;
-    margin-left: 2vw;
-    margin-right: 2vw;
-    padding-top: 2vh;
-    padding-left: 5vw;
+    margin-left: 25px;
+    margin-right: 25px;
+    padding-top: 20px;
     border-top: 1px solid #00B6FF;
+    justify-items: center;
 
 }
 
@@ -94,10 +141,10 @@ body{
 
 .dashBoard--Container{
     display: grid;
-    grid-template-columns: 14vw 86vw;
-    height: 70vh;
+    grid-template-columns: 150px 1fr;
+    height: 65vh;
     align-content: start;
-    padding-top: 1vh;
+    padding-top: 10px;
 }
 
 .dashBoard--SideButtons{
@@ -105,11 +152,9 @@ body{
     margin: 0 auto;
     justify-items: stretch;
     align-items: start;
-    row-gap: 1vw;
-    border-right: 1px solid #00B6FF;
-    padding-bottom: 38vh;
-    padding-right: 3vw;
-    max-width: 90px;
+    padding-bottom: 50vh;
+    padding-right: 30px;
+    max-width: 80px;
 }
 
 .dashBoard--Buttons{
@@ -117,10 +162,13 @@ body{
     background-color: transparent;
     border: 0px;
     border-bottom: 1px solid #00B6FF;
-    padding-bottom: 1vh;
-    padding-top: 1vh;
+    padding-bottom: 10px;
+    padding-top: 10px;
     color:white;
     text-align: start;
+    font-family: 'Fira Sans', sans-serif;
+    font-weight: 300;
+    font-size: 12px;
 }
 
 .dashBoard--Buttons:hover {
@@ -131,9 +179,10 @@ body{
 }
 
 .dashBoard--FileWrapper {
-    /* add hover to make bar get brighter when hoverd over. */
-    display: grid;
-    grid-template-columns: 60vw 25vw 15vw;
+    height: 55vh;
+    padding-right: 5px;
+    padding-left: 5px;
+    overflow-x: auto;
 }
 
 .uploadPage--Buttons {
@@ -141,8 +190,8 @@ body{
     background-color: transparent;
     border: 0px;
     border-style: outset;
-    padding-bottom: 1vh;
-    padding-top: 1vh;
+    padding-bottom: 10px;
+    padding-top: 10px;
     margin-right: 10px;
     color:white;
     text-align: start;
@@ -157,4 +206,34 @@ body{
 
 .myDashBoard--Wrapper {
     width: 80vw;
+    height: 70vh;
+    border-left: 1px solid #00B6FF;
+    padding-left: 50px;
+
+}
+
+.UserFile--File {
+    display: grid;
+    grid-template-columns: 1fr 10vw 10vw;
+    padding-left: 2vw;
+    margin-bottom: 2px;
+    border-bottom: 1px solid #00B6FF;
+    filter: brightness(90%);
+}
+
+.UserFile--File:hover {
+    transition-duration: .8s;
+    background:#00B6FF;
+    color: #FFFF59;
+    filter: brightness(100%);
+    border-radius: 15px;
+}
+
+.UserFile--FileData {
+    
+}
+
+.UserFile--FileHeader {
+    display: grid;
+    grid-template-columns: 1fr 10vw 12vw;
 }
