--- a/client/public/style.css
+++ b/client/public/style.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,300;0,400;0,600;1,300;1,400;1,600&family=IBM+Plex+Serif:ital,wght@0,100;0,200;0,300;0,600;0,700;1,100;1,200;1,300;1,600;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,300;0,400;0,600;1,300;1,400;1,600&family=IBM+Plex+Serif:ital,wght@0,100;0,200;0,300;0,600;0,700;1,100;1,200;1,300;1,400;1,600;1,700&display=swap');
+
 body{
     background-color: #2a2b33;
     margin: 0;
@@ -7,6 +8,27 @@ body{
     font-weight: 300;
     font-size: 12px;
 }
+
+::-webkit-file-upload-button {
+    transition-duration: .6s;
+    background-color: transparent;
+    border-radius: 15px;
+    color:#FFFF59;
+    border: 2px solid #00B6FF;
+    padding-bottom: 10px;
+    padding-top: 5px;
+    color:white;
+    text-align: start;
+    font-family: 'IBM Plex Serif', serif;
+    font-weight: 400;
+    font-size: 20px;
+}
+
+::-webkit-file-upload-button:hover {
+    background-color: #FFFF59;
+    color:#00B6FF
+}
+
 
 ::-webkit-scrollbar {
     width: 15px;
@@ -166,9 +188,9 @@ body{
     padding-top: 10px;
     color:white;
     text-align: start;
-    font-family: 'Fira Sans', sans-serif;
-    font-weight: 300;
-    font-size: 12px;
+    font-family: 'IBM Plex Serif', serif;
+    font-weight: 400;
+    font-size: 15px;
 }
 
 .dashBoard--Buttons:hover {
@@ -176,6 +198,13 @@ body{
     border-radius: 15px;
     color:#FFFF59;
     border: 0px;
+}
+
+.dashBoard--HeaderText {
+    font-family: 'IBM Plex Serif', serif;
+    font-weight: 700;
+    font-size: 25px;
+    font-style: italic;
 }
 
 .dashBoard--FileWrapper {
@@ -199,12 +228,12 @@ body{
 
 .uploadPage--Buttons:hover {
     background-color: #00B6FF;
-    border-radius: 15px;
+    border-radius: 10px;
     color:#FFFF59;
     border: 0px;
 }
 
-.myDashBoard--Wrapper {
+.myDashBoard--Wrapper, .dashBoard--FileDisplay {
     width: 80vw;
     height: 70vh;
     border-left: 1px solid #00B6FF;
