--- a/client/public/style.css
+++ b/client/public/style.css
@@ -56,13 +56,6 @@ body{
     color: white;
 }
 
-/* .mainGrid--Wrapper{
-    display: grid;
-    grid-template-rows: 13vh 74vh 13vh;
-    height: 100vh;
-    margin: auto;
-} */
-
 .mainGrid--Wrapper{
     display: grid;
     grid-template-rows: 90px 1fr 150px;
@@ -71,12 +64,15 @@ body{
 }
 
 .navBar--Container{
+    position: sticky;
+    top: 0;
+    z-index: 100;
     display: grid;
     background-color: #00B6FF;
     border-radius: 0px 0px 15px 15px;
     width: 100vw;
     height: 90px;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr auto 1fr;
     box-shadow: 0px 7px 10px #003e57;
     align-self: start;
     align-items: center;
@@ -117,18 +113,33 @@ body{
 }
 
 .navBar--LogoImg{
-    display: block;
-    position: absolute;
     height: 75px;
-    top: 5px;
-    left: 47.4vw;
 }
 
 .home--Container{
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: 100vw;
+    grid-template-rows: auto 1fr;
     text-align: center;
     margin: 0 auto;
+}
+
+.home--TitleText {
+    font-family: 'IBM Plex Serif', serif;
+    font-weight: 700;
+    font-size: 45px;
+    font-style: italic;
+    margin-top: 7vh;
+}
+
+.home--TitleTextBlue {
+    color: #00B6FF;
+}
+
+.home--LogoImg {
+    align-self: center;
+    justify-self: center;
+    height: 50%;
 }
 
 .home--ButtonContainer{
